--- a/index.html
+++ b/index.html
@@ -114,13 +114,34 @@ aumentar a nota no ENEM sem perder tempo com estudo aleatório.
 <p class="preco-antigo">De R$ 50,00</p>
 <p class="preco-novo">Por apenas R$ 25,00</p>
 
-<h3>O que você vai aprender:</h3>
+<h3>O que você vai aprender dentro do Guia:</h3>
 
-<div class="topico">✔ Estrutura real do exame</div>
-<div class="topico">✔ Como funciona a TRI na prática</div>
-<div class="topico">✔ Técnica de eliminação avançada</div>
-<div class="topico">✔ Gestão de tempo estratégica</div>
-<div class="topico">✔ Modelo de estratégia para redação</div>
+<p style="margin-bottom:20px; color:#cbd5e1;">
+Este não é apenas um resumo. É um guia estratégico completo para transformar
+sua forma de fazer o ENEM.
+</p>
+
+<div class="topico">✔ Desvendando a estrutura real do exame (como a prova é pensada)</div>
+
+<div class="topico">✔ Como funciona a TRI na prática e como usar isso a seu favor</div>
+
+<div class="topico">✔ Estratégia de resolução usada por alunos de alto desempenho</div>
+
+<div class="topico">✔ Como identificar questões fáceis em menos de 5 segundos</div>
+
+<div class="topico">✔ Estratégia avançada de eliminação para aumentar sua pontuação</div>
+
+<div class="topico">✔ Gestão de tempo e controle da ansiedade no dia da prova</div>
+
+<div class="topico">✔ Simulados estratégicos e análise de desempenho inteligente</div>
+
+<div class="topico">✔ O caminho para a melhoria contínua na sua preparação</div>
+
+<div class="topico">✔ Rotina inteligente de estudos (manhã, tarde e noite)</div>
+
+<div class="topico">✔ Métodos práticos de redação que aumentam sua nota</div>
+
+<div class="topico">✔ Estratégias específicas por área do conhecimento</div>
 
 <p style="margin-top:20px;">
 Acesso imediato após a confirmação do pagamento.
